2001-04-09  Akim Demaille  <akim@epita.fr>

	* tests/defs, tests/depend3.test: Remove useless code.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_source_transform):  Use
	&variable_conditions, don't read $conditional{$var}.
	(&variable_conditions_sub): When the call is the top level call,
	generate all the permutations of the conditions.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* depend2.am (@AMDEP@%FPFX%DEPMODE): Define it when GENERIC so
	that it does not get noticed twice by automake, which now
	complains for multiple definitions.
	* tests/vartar.test: s/INSTALL/install/g, automake now complains
	because we defined INSTALL.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&generate_makefile) Use macro_define to define
	SOURCES and OBJECTS.
	(&variable_defined): Don't check for $conditional{VAR}{COND} as
	this would make perl create $condition{VAR}, which we don't want.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&variable_defined, &define_pretty_variable):
	Simplify code which used to handle the cases where not all
	variables were in %conditional.
	(&define_variable): Use &define_pretty_variable.
	(&variable_conditions_sub, &variable_value_as_list_worker)
	(&variable_value_as_list, &rule_define): Simplify syntax.
	(&read_main_am_file): Dump the guilty predefined variables.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&variable_conditions_sub)
	(&variable_value_as_list_worker): Remove dead code which used to
	handle the cases where not all variables were in %conditional.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_source_transform, &read_main_am_file):
	Simplify loops which were split in two parts, conditional vs
	unconditional variables.

2001-04-09  Akim Demaille  <akim@epita.fr>

	Handle unconditional values of variables as conditioned by
	`TRUE'.

	* automake.in (%contents): Remove.
	(&generate_makefile, &handle_ltlibraries, &macro_define)